# nlp-employee-insights-dashboard

./: .env.example  .env.production  .gitignore  D1_INTEGRATION_SUMMARY.md  DEPLOYMENT.md  DESKTOP_IMPROVEMENTS.md  GITHUB_SETUP.md  INTEGRATION_GUIDE.md  LOCALHOST_SETUP.md  MOBILE_SETUP.md  README.md  SEARCH_DEBOUNCE_FIXES.md  SETUP.md  deploy-mobile.sh  deploy.sh  import-database.js  import-incremental.js  next.config.js  package-lock.json  package.json  pre-deploy.sh  tailwind.config.ts  tsconfig.json  verify-import.js  vite.config.js  vite.mobile.config.js  wrangler.mobile.toml  wrangler.toml
app/: layout.tsx  page.tsx
app/my-insights/: page.tsx
app/settings/: page.tsx
attached_assets/: data.sql  database.json  database_gabungan.json
client/src/: App.tsx
components/: AIConclusion.tsx
dist-mobile/: index.html
employee-insights-api/: Cargo.toml  wrangler.toml
employee-insights-api/src/: lib.rs
hooks/: use-auth.ts  useApi.ts  useBookmarks.ts  useErrorHandler.ts  useKotaSummary.ts  useOptimizedDebounce.ts  useOptimizedQuery.ts  usePageContext.ts  usePagination.ts
js-api/: README.md  package-lock.json  package.json  wrangler.toml
lib/: queryClient.ts
mobile-app/: DESIGN_IMPROVEMENTS.md  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.toml
services/: apiClient.ts  authService.ts  index.ts  insightsService.ts
styles/: globals.css
types/: api.ts  common.ts  components.ts  index.ts  insights.ts  kota-summary.ts
utils/: constants.ts  formatters.ts  validators.ts
(+116 files in other folders)
